--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rill/auth",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Simple session login and logout for Rill.",
   "author": "Dylan Piercey <pierceydylan@gmail.com>",
   "main": "index.js",
@@ -17,10 +17,15 @@
     "rill"
   ],
   "devDependencies": {
-    "@rill/session": "^0.8.0",
+    "@rill/session": "^1.0.1",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.3",
+    "install": "^0.3.0",
+    "npm": "^3.4.1",
     "rill": "rill-js/rill",
     "supertest": "^1.1.0"
+  },
+  "peerDependencies": {
+    "@rill/session": "^1.x"
   }
 }
